<resources>
    <string name="app_name">FitBox</string>
    <string name="authenticate">Open/Close Locker</string>
    <string name="close">Close Locker</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_book">Book</string>
    <string name="title_settings">Settings</string>
    <string name="welcome">Welcome to FitBox</string>
    <string name="booking">Booking</string>
    <string name="toBook">Book your smart lock</string>
    <string name="parkToBook">Select a Park</string>
    <string name="inCardAct">In card activity</string>
    <string name="CalButt">Select hour</string>
    <string name="clean">Clean</string>
    <string name="profile">Your Profile</string>
    <string name="details">Details</string>
    <string name="park">Park</string>
    <string name="date">Date</string>
    <string name="back">Go Back</string>
    <string name="locker">Locker</string>
    <string name="duration">Duration</string>
    <string name="nearyouhome">Friends near you</string>
    <string name="book">Book</string>
    <string name="facebook_app_id">188270735413547</string>
    <string name="fb_login_protocol_scheme">fb188270735413547</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="signed_out">Sign Out</string>
    <string name="signed_out2">Signed Out</string>
    <string name="title_activity_card_to_book">Map</string>
    <string name="locker_main">Select your locker</string>
    <string name="booking_home">Your Booking</string>
    <string name="leave_locker">Leave Locker</string>
    <string name="delete_booking">Delete Booking</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

</resources>
